src/kubernetes/apps/news/freshrss/manifests/ingress.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: freshrss
  namespace: freshrss
spec:
  parentRefs:
  - name: nginx
    namespace: nginx-gateway
  hostnames:
  - freshrss.valhallahub.nl
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: freshrss
      port: 80
